fix(pk-portfolio): modified ~/components/_hero, updated Hero paragraph line height to improve readability.

--- a/apps/pk-portfolio/src/scss/components/_hero.scss
+++ b/apps/pk-portfolio/src/scss/components/_hero.scss
@@ -17,6 +17,8 @@
       font-size: 32px;
     }
 
+    & > p { line-height: 1.5rem; }
+
     & > div { display: flex; }
 
     & > div > a {
